<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.zelaznog.library.MakeDatabase">
    <item android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item android:id="@+id/action_movies" android:title="@string/action_movies"
        android:orderInCategory="100"
        app:showAsAction="always"/>
    <item android:id="@+id/action_series" android:title="@string/action_series"
        android:orderInCategory="100"
        app:showAsAction="always"/>
    <group android:checkableBehavior="single">
        <item android:id="@+id/bitrate500"
            android:title="500kbps" />
        <item android:id="@+id/bitrate1500"
            android:title="1500kbps" />
        <item android:id="@+id/bitrateMAX" android:checked="true"
            android:title="MAX" />
    </group>
    <group android:checkableBehavior="all">
        <item android:id="@+id/useProxy"
            android:title="Use Proxy" android:checkable="true"/>
    </group>
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_reset" android:title="@string/action_reset"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_update" android:title="@string/action_update"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_quit" android:title="@string/action_quit"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
